--- a/weath.html
+++ b/weath.html
@@ -14,7 +14,7 @@
         <input type="text" id="locationInput" placeholder="Enter city name">
         <button onclick="getWeather()">Get Weather</button>
 
-        <div id="loading" style="display:none; text-align: center; margin: 10px 0;">Loading weather data... ⏳</div>
+        <div id="loading" style="display:none; text-align: center; margin: 10px 0;">Loading weather data.. ⏳</div>
 
         <div class="weather-result">
             <p id="place"></p>
